Added style and modified markup

--- a/demo.html
+++ b/demo.html
@@ -10,20 +10,21 @@
 <!doctype html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>seed-element Demo</title>
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0,
+                                  initial-scale=1.0, user-scalable=yes">
+  <title>ricardo-ui-alert demo</title>
 
   <script src="../webcomponentsjs/webcomponents.min.js"></script>
-  <link rel="import" href="seed-element.html">
+  <link rel="import" href="ricardo-ui-alert.html">
 
 </head>
 <body unresolved>
 
   <p>An example of using <code>&lt;seed-element&gt;</code>:</p>
 
-  <seed-element>
-    <h2>Hello seed-element</h2>
-  </seed-element>
+  <ricardo-ui-alert>
+    Hello ricardo-alert-ui!
+  </ricardo-ui-alert>
 
 </body>
 </html>
