Added basic dynamic styling with attribute

--- a/demo.html
+++ b/demo.html
@@ -22,7 +22,7 @@
 
   <p>An example of using <code>&lt;seed-element&gt;</code>:</p>
 
-  <ricardo-ui-alert>
+  <ricardo-ui-alert status="info">
     Hello ricardo-alert-ui!
   </ricardo-ui-alert>
 
