Increased version number and added example code in demo page

--- a/demo.html
+++ b/demo.html
@@ -24,7 +24,11 @@
 </head>
 <body unresolved>
 
-  <p>An example of using <code>&lt;ricardo-ui-alert&gt;</code>:</p>
+  <p>Examples of using <code>&lt;ricardo-ui-alert&gt;</code>:</p>
+
+  <code>
+    &lt;ricardo-ui-alert status="success"&gt;Great news: ricardo-alert-ui is born!&lt;/ricardo-ui-alert&gt;
+  </code>
 
   <ricardo-ui-alert status="success">
     Great news: ricardo-alert-ui is born!
