Refactored project structure and added grunt base build process

--- a/demo.html
+++ b/demo.html
@@ -15,7 +15,7 @@
   <title>ricardo-ui-alert demo</title>
 
   <script src="../webcomponentsjs/webcomponents.min.js"></script>
-  <link rel="import" href="ricardo-ui-alert.html">
+  <link rel="import" href="dist/ricardo-ui-alert-vulcanized.html">
   <style>
     ricardo-ui-alert {
       margin: 10px 0px;
